--- a/css/httml/braintech.html
+++ b/css/httml/braintech.html
@@ -63,7 +63,7 @@
                             <p><img src="/images/atom.webp" alt=""></p>
                             <div class="add">
                                 <p>Address</p>
-                                <p>09, Alhaji Odunsanya</p>
+                                <p>09, Alhaji Odunsanya, bariga, lagos, nigeria africa, universe</p>
                             </div>
                         </div>
                         <div class="address">
