--- a/httml/braintech.html
+++ b/httml/braintech.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>braintech</title>
-    <link rel="stylesheet" href="../style1.css">
+    <!-- <link rel="stylesheet" href="../style1.css">
     <link rel="stylesheet" href="../style2.css">
-    <link rel="stylesheet" href="../style3.css">
-    <link rel="stylesheet" href="/tools/css-fafa/font-awesome.min.css">
+    <link rel="stylesheet" href="../style3.css"> -->
+    <link rel="stylesheet" href="../css/style1.css">
+    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/style3.css">
+    <link rel="stylesheet" href="../tools/css-fafa/font-awesome.min.css">
 </head>
 <body>
      <header class="desktop-header">
         <!-- the headers -->
         <div class="image">
-            <img src="/images/braintech-logo.webp" alt="">
+            <img src="../images/braintech-logo.webp" alt="">
         </div>
         <!-- the navbars -->
         <nav>
@@ -60,21 +63,21 @@
                     </div>
                     <div class="add-con-em">
                         <div class="address">
-                            <p><img src="/images/atom.webp" alt=""></p>
+                            <p><img src="../images/atom.webp" alt=""></p>
                             <div class="add">
                                 <p>Address</p>
                                 <p>09, Alhaji Odunsanya</p>
                             </div>
                         </div>
                         <div class="address">
-                            <p><img src="/images/atom.webp" alt=""></p>
+                            <p><img src="../images/atom.webp" alt=""></p>
                             <div class="add">
                                 <p>Email</p>
                                 <p>luqmanola@gmail.com</p>
                             </div>
                         </div>
                         <div class="address">
-                            <p><img src="/images/atom.webp" alt=""></p>
+                            <p><img src="../images/atom.webp" alt=""></p>
                             <div class="add">
                                 <p>Phone</p>
                                 <p>09016461891</p>
@@ -112,9 +115,9 @@
     </section>
     <section id="about">
         <div class="about-img">
-           <p><img src="/images/sec-img-first-sec.webp" alt=""></p>
-           <p><img src="/images/first-img-first-sec.webp" alt=""></p>
-           <p><img src="/images/third-img-first-sec.webp" alt=""> </p>
+           <p><img src="../images/sec-img-first-sec.webp" alt=""></p>
+           <p><img src="../images/first-img-first-sec.webp" alt=""></p>
+           <p><img src="../images/third-img-first-sec.webp" alt=""> </p>
         </div>
         <div class="about-content">
 
