change to index.html

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     </div>
     <footer>
         <div class="bt-footer">
-            <div><img src="/images/braintech-logo.webp" width="150px" alt=""></div>
+            <div><img src="./images/braintech-logo.webp" width="150px" alt=""></div>
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse doloribus quod fugiat distinctio qui natus, odio eum porro aliquam voluptatum.</div>
             <div class="accounts">
                 <p class="fa fa-facebook acc"></p>
